--- a/Pagina Principal.html
+++ b/Pagina Principal.html
@@ -5,6 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Dos alamos</title>
+    <!-- favicon-->
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico">
+
 
     
   </body>
@@ -18,6 +21,7 @@
 
     <!-- CSS propio -->
     <link rel="stylesheet" href="3- biblioteca de CSS/Pagina_Inicio.css">
+
   </head>
   <style>
 
@@ -55,10 +59,11 @@
 
                   </li>
 
-                  <form class="form-inline mx-5 my-2 my-lg-0 ">
+                  <!-- <form class="form-inline mx-5 my-2 my-lg-0 ">
                     <input class="form-control mx-6 mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                     <button class="buscar btn-outline-light btn-light text-dark my-2 my-sm-0" type="submit">Buscar</button>
-                  </form>
+                  </form> -->
+
                 </div>
               </div>
           </nav>
