--- a/Pagina Principal.html
+++ b/Pagina Principal.html
@@ -165,4 +165,15 @@
       </script>
 
   </body>
+
+ <footer class="bg-light text-center text-lg-start">
+   <!-- Copyright -->
+   <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+     @ 2022 Copyright:
+     <a class="text-white" href="https://dosalamos.ml/">Dos Alamos</a>
+   </div>
+   <!-- Copyright -->
+ </footer>
+
+
 </html>
