--- a/Pagina Principal.html
+++ b/Pagina Principal.html
@@ -51,7 +51,7 @@
                   <li class="nav-item dropdown">
 
 
-                    <a class="nav-link" style="color:#ffffff"; href="https://dosalamos.ml/agenda/index.php/user/login" >Log In</a>
+                    <a class="nav-link" style="color:#ffffff"; href="https://dosalamos.ml/agenda/index.php/user/login" >Iniciar Sesión</a>
 
                   </li>
 
