--- a/Pagina Principal.html
+++ b/Pagina Principal.html
@@ -33,10 +33,9 @@
       <div class="row">
         <div class="col-12 redes">
           <div class="col-1 image"><img src="img/Logo2.oahora si q si.png" alt="" height="80" width="auto"></div>
-          <a href="https://www.instagram.com/naruto/"><div class="col-1 circulo"><i class="fab fa-instagram"></i></div></a>
-          <a href="https://www.instagram.com/naruto/"><div class="col-1 circulo"><i class="fab fa-facebook-f"></i></div></a>
-          <a href="https://www.instagram.com/naruto/"><div class="col-1 circulo"><i class="fab fa-google-plus-g "></i></div></a>
-          <a href="https://www.instagram.com/naruto/"><div class="col-1 circulo"><i class="far fa-envelope"></i></div></a>
+          <a href="https://www.instagram.com/dos_alamos/"><div class="col-1 circulo"><i class="fab fa-instagram"></i></div></a>
+          <a href="https://www.facebook.com/profile.php?id=100077464096773"><div class="col-1 circulo"><i class="fab fa-facebook-f"></i></div></a>
+          <a href="https://twitter.com/home"><div class="col-1 circulo"><i class="fab fa-twitter"></i></div></a>
         </div>
     </div>
     </div>
