--- a/Pagina Principal.html
+++ b/Pagina Principal.html
@@ -170,7 +170,7 @@
    <!-- Copyright -->
    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
      @ 2022 Copyright:
-     <a class="text-white" href="https://dosalamos.ml/">Dos Alamos</a>
+     <a class="text-white" href="https://dosalamos.ml/">Dos Álamos</a>
    </div>
    <!-- Copyright -->
  </footer>
